Expand canvas, title to top, allow margins to be set

--- a/pie_chart.scss
+++ b/pie_chart.scss
@@ -6,8 +6,9 @@ $background-color:  #303030;
 $title-color:       rgba(255, 255, 255, 0.7);
 $moreinfo-color:    rgba(255, 255, 255, 0.7);
 $updateat-color:    rgba(255, 255, 255, 1);
-$chart-width:       100%;
-$chart-height:      100%;
+
+// If you want the title at the top, set the position to 'top'
+$title-position:    top;
 
 // ----------------------------------------------------------------------------
 // Widget-pie-chart styles
@@ -17,6 +18,17 @@ $chart-height:      100%;
   background-color: $background-color;
 
   .title {
+    @if $title-position == 'top' {
+      left: 0;
+      right: 0;
+      top: 10px;
+      position: absolute;
+    }
+    @else {
+      position: relative;
+    }
+
+    z-index: 1;
     color: $title-color;
   }
 
@@ -26,11 +38,6 @@ $chart-height:      100%;
 
   .updated-at {
     color: $updateat-color;
-  }
-
-  canvas#chart-area.chart-area {
-    width: $chart-width !important;
-    height: $chart-height !important;
   }
 
 }
